# umbrello

./: .arcconfig  .craft.ini  .flatpak-manifest.json  .gitignore  .gitlab-ci.yml  .kde-ci.yml  .krazy  .reviewboardrc  AUTHORS  CMakeLists-StandaloneIncl.txt  CMakeLists.txt  CODING-STYLE  ChangeLog  ChangeLog.2  Doxyfile  INSTALL  Mainpage.dox  Makefile.am  README  SOC_MERGE_TODO  THANKS  TODO  VERSION  configure.in.bot  configure.in.in  fixVisibilityEnum200616  make-umbrello-release.sh  snapcraft.yaml  uml.directory  uml.kdevelop  uml.kdevprj  uml.lsm
doc/: CMakeLists.txt  Makefile.am  authors.docbook  code_import_and_generation.docbook  credits.docbook  faq.docbook  index.docbook  index.docbook.cmake  installation.docbook  introduction.docbook  menu_reference.docbook  other_features.docbook  screenshots.pot  screenshots.xmi  settings.docbook  uml_basics.docbook  working_with_umbrello.docbook
doc/apphelp/: CMakeLists.txt  index.docbook
doc/pics/: Makefile.am
doc/xml/: 01-02-16.dtd  umbrello-diagrams.dtd  umbrello-misc.dtd  uml-1.3-umbrello.dtd  uml-1.4-umbrello.dtd  uml13.dtd  uml241.dtd  xmllint2dtd
lib/kdev4-php/: AUTHORS  CMakeLists.txt  CTestConfig.cmake  HACKING  Messages.sh  TODO  create_functions.php  kdevphpsupport.desktop.cmake  kdevphpversion.h.cmake  phpfunctions.php  phphighlighting.cpp  phphighlighting.h  phplanguagesupport.cpp  phplanguagesupport.h  phpparsejob.cpp  phpparsejob.h
lib/kdev5-php/: CMakeLists.txt  Messages.sh  create_functions.php  kdevphpsupport.categories  kdevphpsupport.json  kdevphpversion.h.cmake  org.kde.kdev-php.metainfo.xml  org.kde.umbrello.kdev-php.metainfo.xml  phpdebug.cpp  phpdebug.h  phphighlighting.cpp  phphighlighting.h  phplanguagesupport.cpp  phplanguagesupport.h  phpparsejob.cpp  phpparsejob.h
lib/kdevplatform/: CMakeLists.txt
maintainer/: CMakeLists.txt  ci-build.sh  create-screenshots  create-screenshots-xmi  git-changelog  git-tags  list-duplicate-xmi-ids  list-users  release-windows-packages  svg2png.cpp  update-version  xmi-attribute-changelog  xmi-changelog  xmilint
tools/: CMakeLists.txt  ci-build.sh  ci-install.sh  ci-run-docker-image.sh  lint-xmi-files  po2xmi.cpp  shared.cpp  shared.h  show-class-file-associations  xmi2pot.cpp  xmllint2dtd
umbrello/: CMakeLists.txt  Mainpage.dox  Makefile.am  Messages.sh  activitywidget.cpp  activitywidget.h  activitywidgetdata.cpp  activitywidgetdata.h  actor.cpp  actor.h  actorwidget.cpp  actorwidget.h  actorwidgetdata.cpp  actorwidgetdata.h  adaimport.cpp  adaimport.h  aligntoolbar.cpp  aligntoolbar.h  artifact.cpp  artifact.h  artifactwidget.cpp  artifactwidget.h  artifactwidgetdata.cpp  artifactwidgetdata.h  association.cpp  association.h  associationspacemanager.cpp  associationspacemanager.h  associationwidget.cpp  associationwidget.h  associationwidgetdata.cpp  associationwidgetdata.h  associationwidgetdatalist.h  associationwidgetlist.h  associationwidgetmanager.cpp  associationwidgetmanager.h  assocrules.cpp  assocrules.h  attribute.cpp  attribute.h  (+425 more)
umbrello/_unused/: configurable.cpp  configurable.h  plugin.cpp  plugin.h  pluginloader.cpp  pluginloader.h  test.cpp  test.h
umbrello/autolayout/: Makefile.am  _graph.h  autolayout.h  autolayoutdlg.cpp  autolayoutdlg.h  autolayouter.cpp  autolayouter.h  autolayouteradapter.cpp  autolayouteradapter.h  baseinclude.h  canvas.h  diagram.h  diagram_interface.h  dotautolayouter.cpp  dotautolayouter.h  graphvizautolayouter.cpp  graphvizautolayouter.h  graphvizgraph.cpp  graphvizgraph.h  graphviznode.cpp  graphviznode.h  newautolayoutdialog.ui  node.h  simplecanvas.cpp  simplecanvas.h
umbrello/classparser/: CMakeLists.txt  ClassParser.cc  ClassParser.h  ClassStore.cc  ClassStore.h  ClassTreeNode.cc  ClassTreeNode.h  Makefile.am  ParsedArgument.cc  ParsedAttribute.cc  ParsedAttribute.h  ParsedClass.cc  ParsedClass.h  ParsedClassContainer.cc  ParsedClassContainer.h  ParsedContainer.cc  ParsedContainer.h  ParsedEnum.h  ParsedItem.cc  ParsedItem.h  ParsedMethod.cc  ParsedMethod.h  ParsedParent.cc  ParsedScopeContainer.cc  ParsedScopeContainer.h  ParsedSignalSlot.cc  ParsedSignalSlot.h  ParsedStruct.cc  ParsedStruct.h  ParsedTypedef.h  PersistantClassStore.cc  PersistantClassStore.h  ast.cpp  ast.h  ast_utils.cpp  cpptree2uml.cpp  cpptree2uml.h  driver.cpp  driver.h  errors.cpp  (+13 more)
umbrello/clipboard/: CMakeLists.txt  Makefile.am  idchangelog.cpp  idchangelog.h  umlclipboard.cpp  umlclipboard.h  umldrag.cpp  umldrag.h  umldragdata.cpp  umldragdata.h
umbrello/cmake/: revision.h.in
umbrello/cmds/: cmd_baseObjectCommand.cpp  cmd_baseObjectCommand.h  cmd_createDiagram.cpp  cmd_createDiagram.h  cmd_create_activitydiag.cpp  cmd_create_activitydiag.h  cmd_create_class.cpp  cmd_create_classdiag.cpp  cmd_create_classdiag.h  cmd_create_collaborationdiag.cpp  cmd_create_collaborationdiag.h  cmd_create_componentdiag.cpp  cmd_create_componentdiag.h  cmd_create_deploydiag.cpp  cmd_create_deploydiag.h  cmd_create_diagram.cpp  cmd_create_entityrelationdiag.cpp  cmd_create_entityrelationdiag.h  cmd_create_seqdiag.cpp  cmd_create_seqdiag.h  cmd_create_statediag.cpp  cmd_create_statediag.h  cmd_create_umlobject.cpp  cmd_create_umlobject.h  cmd_create_usecasediag.cpp  cmd_create_usecasediag.h  cmd_handleRename.cpp  cmd_handleRename.h  cmd_handle_rename.cpp  (+31 more)
unittests/: CMakeLists.txt  TEST_basictypes.cpp  TEST_basictypes.h  TEST_classifier.cpp  TEST_classifier.h  TEST_cppwriter.cpp  TEST_cppwriter.h  TEST_llvm.cpp  TEST_llvm_parser.cpp  TEST_optionstate.cpp  TEST_optionstate.h  TEST_pythonwriter.cpp  TEST_pythonwriter.h  TEST_umlobject.cpp  TEST_umlobject.h  TEST_umlroledialog.cpp  testassociation.cpp  testassociation.h  testbase.cpp  testbase.h  testbasictypes.cpp  testbasictypes.h  testclassifier.cpp  testclassifier.h  testcppwriter.cpp  testcppwriter.h  testcrashhandler.cpp  testlistpopupmenu.cpp  testlistpopupmenu.h  testllvm.cpp  testllvmparser.cpp  testoptionstate.cpp  testoptionstate.h  testpackage.cpp  testpackage.h  testpreconditionwidget.cpp  testpreconditionwidget.h  testpythonwriter.cpp  testpythonwriter.h  testumlcanvasobject.cpp  (+6 more)
(+2264 files in other folders)
